--- a/wiki/FrequentlyAskedQuestions.wiki
+++ b/wiki/FrequentlyAskedQuestions.wiki
@@ -41,30 +41,7 @@ TGM mostly works. This section lists the few issues this project aims to fix.
 
 Always use the latest TGM on the project downloads page and check the release notes (link above). There are not many issues, and you won't damage Firefox by using TGM if it doesn't work. The main risk is that tabs can be "lost" in some cases, so read the notes to find out more.
 
-===All versions / general info===
-  * You can check which version of Firefox you're using by checking "Help > About Firefox". 
-
-  * If you want to go back to Firefox 18 or 19 to make TGM work, it's easy. But you might have to check compatibility of other extensions if they were updated recently.
-
-===Firefox UP TO version 18.0.2 or 19:===
-
-  * TGM currently works best with versions of Firefox up to 18.0.2 (or perhaps 19, see below). It is reliable, stable, safe, and useful.<p><p>There is one important issue:<p><p>You <u>MUST</u> go to about:config (which allows you to change hidden settings in Firefox) and change one setting yourself. *You need to change the setting browser.sessionstore.restore_hidden_tabs from 'false' to 'true'*. This makes sure tabs cannot sometimes be "lost". Details below - it's easy :)
-
-  * Other minor known issues are that the number of hibernated tab groups doesn't get updated during a session, and tab drag/drop of multiple tabs may not always work, these are annoyances but mostly minor, they won't stop you benefiting from TGM.
-
-===Firefox version 19:===
-
-  * It isn't clear if Firefox 19 works nicely, like Firefox 18.0.2, or has a few glitches like Firefox 20. You might want to play around with this.
-
-===Firefox version 20 to 24:===
-
-  * The notes for Firefox up to 18 or 19 apply. There are also two new glitches to be aware of, with these versions of Firefox: - suspended groups are LOST on restart/restore, and tabs and groups are reloaded OUT OF ORDER (ie mixed up order) when a session restarts or reloads. 
-
-  * Otherwise TGM works, so if you avoid suspending tab groups and can cope with a bit of re-ordering (on starting/ending/saving/restoring sessions) then you'll be fine.
-
-===Firefox 25+:===
-
-  * Firefox 25 will introduce major changes affecting many extensions. It'll require work to make TGM work properly in all ways with Firefox 25.
+  * Detailed info - see *[MakingTGMWork_and_KnownIssues]*
 
 =New issues, issue reporting, and troubleshooting=
 
@@ -79,13 +56,3 @@ _TabGroups Manager doesnt work:_
 _ HELLLP!_
 
   * Anything else - check existing issues and if it's not in that list, it's possible that it is something about your own setup of Firefox. Ask on the extension review thread, or Mozilla forums, or on the links provided on this project page, try usual troubleshooting steps (such as selectively disabling other extensions, or reinstalling, or a clean profile) and see if anyone can help narrow it down!
-
-
-= Notes =
-
-To change the item in "about:config":
-
-  * Type about:config into your address bar (where you would type any website address. if it asks if you're sure, click "ok" ( or"I'll be good!")
-  * In the filter box at the top, type "restore" which should shorten the list of advanced settings a lot.
-  * Find the setting "browser.sessionstore.restore_hidden_tabs". if it says 'false' next to it, double-click it. It should go bold and turn to 'true'.
-  * You're done. Close the page and do whatever you were going to do next, anyway!
