--- a/wiki/DeveloperResourcesAndInfo.wiki
+++ b/wiki/DeveloperResourcesAndInfo.wiki
@@ -27,11 +27,20 @@ Also toolbars and tab layout is changing, apparently. However, _"the Jetpack tea
   * https://developer.mozilla.org/en-US/docs/XUL/School_tutorial/The_Essentials_of_an_Extension MDN: The Essentials of an Extension/XUL
   * https://developer.mozilla.org/en-US/docs/Extensions MDN: Extensions
   * https://addons.mozilla.org/en-US/developers/tools/builder Developer Hub: Extension Builder and SDK
+  * http://blog.mozilla.org/addons/tag/firefox-25/ - Mozilla Add-ons Blog: posts tagged "Firefox 25"
+  * https://hacks.mozilla.org/ Mozilla Hacks (developer blog/resources)
+  * http://blog.mozilla.org/addons/category/builder/ Mozilla Add-ons Blog: builder
+  * http://blog.mozilla.org/addons/category/documentation/ Mozilla Add-ons Blog: documentation
+  * http://blog.mozilla.org/addons/category/developers/ Mozilla Add-ons Blog: developers
+  * http://blog.mozilla.org/addons/category/compatibility/ Mozilla Add-ons Blog: compatibility
+
 
 *Other*
   * http://firefoxdev.blogspot.co.uk/ Firefox extension development tips & tricks
   * http://www.ibm.com/developerworks/library/os-extendfirefox/ Create your own browser extensions, Part 2: Extend your reach into Firefox
   * http://www.ibm.com/developerworks/library/os-extendagnostic/index.html Create your own browser extensions, Part 4: Move toward browser-agnostic extensions
+  * http://stackoverflow.com/questions/16709329/are-there-ways-to-style-or-modify-the-firefox-tab-group-window  - Stack Overflow: styling and modifying the Firefox tab group window
+  * http://comments.gmane.org/gmane.comp.mozilla.firefox.devel/366 Development discussion about Firefox
   
 *Misc tools and tricks*
   * http://www.firebreath.org/display/documentation/FireBreath+Home
