Edited wiki page MakingTGMWork_and_KnownIssues through web user interface.

--- a/wiki/MakingTGMWork_and_KnownIssues.wiki
+++ b/wiki/MakingTGMWork_and_KnownIssues.wiki
@@ -1,4 +1,4 @@
-#summary Making !TabGroups Manager work, and "known issues".
+#summary Making TabGroups Manager work, and "known issues".
 #labels Phase-Support,How-To
 
 = Making !TabGroups Manager work, and "known issues" =
