--- a/wiki/DeveloperResourcesAndInfo.wiki
+++ b/wiki/DeveloperResourcesAndInfo.wiki
@@ -20,7 +20,7 @@ Also toolbars and tab layout is changing, apparently. However, _"the Jetpack tea
   * https://github.com/ttaubert/firefox-tabgroups - the replacement Panorama code (which we ought to fit in with, if we can, or liaise with)
   * https://bugzilla.mozilla.org/show_bug.cgi?id=874381 - the tracking bug for the big changes in FF25. 
 
-*TGM thread on mailing list (2013): worth reading in full*
+*TGM refresh thread on mailing list (2013): worth reading in full (others' views on TGM and tab groups, following FF25)*
   * https://mail.mozilla.org/pipermail/firefox-dev/2013-April/000251.html
   * https://mail.mozilla.org/pipermail/firefox-dev/2013-April/000252.html
   * https://mail.mozilla.org/pipermail/firefox-dev/2013-April/000256.html
