--- a/wiki/DevelopersGuideForDebugging.wiki
+++ b/wiki/DevelopersGuideForDebugging.wiki
@@ -1,4 +1,6 @@
+#summary Developers Guide For Debugging
 #labels Phase-Implementation,Phase-Requirements,Phase-Deploy
+
 = Developers Guide For Debugging = 
 
 
