--- a/wiki/DevelopersGuideForDebugging.wiki
+++ b/wiki/DevelopersGuideForDebugging.wiki
@@ -114,16 +114,15 @@ This value will help to debug the code and output a lot more information that is
   * If we have successfully completed the above steps, we can start Firefox and make a simple test creating 2 TabGroupsManager groups.
 Settings debug parameters in Firefox will break Firebug, but dont worry, we wont need it for debugging our javascript.
 
-  * To debug TabGroupsManager javascript extension, go to Firefox Tools, Web Developers, open Browser Debugger. A new window will ask to accept incoming remote connection to Firefox, click on Yes. For more information about Debugging with Firefox Browser Debugger, please check the following links:
-    * http://paulrouget.com/e/devtoolsnext
-    * https://hacks.mozilla.org/2013/07/new-features-in-firefox-developer-tools-episode-24/
+  * To debug TabGroupsManager the best option is to use *VenkMan Javascript Debugger*. _"Although at first glance it might seem that Venkman cannot debug extensions, doing so is in fact fully supported; it's just disabled by default. To debug your extension with Venkman (XUL files and their attached JS files), you'll have to load browser and extension files into Venkman by unchecking Debug > Exclude Browser Files."_
+    * https://addons.mozilla.org/en-US/firefox/addon/javascript-debugger
 
-  * At the left you will see the list of files that belongs to Firefox and to Firefox extensions (.xml, .jsm, .js...). In the middle you will see the source code of the selected file. Click in the right small button [<>] with says Collapse Panels and a new panel will appear where you can see and add new variables to watch its value.
-  * Select TabGroupsManager.js and set a breakpoint in the code clicking in the left blank space (in the line number). Set it in the line 5814:
-`Breakpoint -- var sfunc = arguments.callee.caller.toString(); //works`
-  * Now Firefox will stop in that breakpoint and you will be able to debug the code and variable values with F6 (Run), F7(Go Next Line) and F8(Go Inside).
+  * At the left you will see the list of files and scripts (.xml, .jsm, .js...), variables and breakpoints.  (.xml, .jsm, .js...). Select TabGroupsManager.js file and set a breakpoint in the code by double clicking in the left blank space, near the the line number. For testing, set it in the line 5814:
+    * `Breakpoint -- var sfunc = arguments.callee.caller.toString(); //works`
+  * Now Firefox will stop in that breakpoint and you will be able to debug the code and variable values with F5(Run), F12(Go Next Line) and F11(Go Inside).
 
   * Things to know:
+    # You need to set all developer parameters in Firefox to debug scripts. Also you need to uncheck: Debug > Exclude Browser Files in VenkMan.
     # TabGroupsManager will save a log file with the callstack in c:\tabsgm.txt. Delete that file when you need. Change the log if you are under Linux or it will not work.
     # Adding the following code in a line will stop the execution, like if we set a breakpoint in that line:
         * `debugger;`
@@ -142,6 +141,10 @@ Settings debug parameters in Firefox will break Firebug, but dont worry, we wont
     * Although at first glance it might seem that Venkman cannot debug extensions, doing so is in fact fully supported; it's just disabled by default. To debug your extension with Venkman (XUL files and their attached JS files), you'll have to load browser and extension files into Venkman by unchecking Debug > Exclude Browser Files.
     * https://addons.mozilla.org/en-US/firefox/addon/javascript-debugger
     * https://developer.mozilla.org/en-US/docs/Venkman_Introduction#Loading_Scripts_into_the_Debugger
+
+  * Another option could be Firefox Debugger: Firefox Tools, Web Developers, open Browser Debugger. A new window will ask to accept incoming remote connection to Firefox, click on Yes. For more information about Debugging with Firefox Browser Debugger, please check the following links:
+    * http://paulrouget.com/e/devtoolsnext
+    * https://hacks.mozilla.org/2013/07/new-features-in-firefox-developer-tools-episode-24/
 
   * NetBeans Debugger for Firefox Extensions:
     * https://secure.teesoft.info/hg/FoxbeansSuite/summary
